# F1-server

./: .dockerignore  .gitignore  Dockerfile  README.md  evaluation_set.md  pyproject.toml  pytest.ini  test.py  test_fastf1_agent.py
app/: app.py
src/: __init__.py  main.py
tests/: conftest.py  test_data_loader.py  test_gemini_agent.py
